fix xterm visible scollbar and bg theme edit

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -25,3 +25,8 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+/* remove xtermjs scrollbar */
+.xterm-viewport::-webkit-scrollbar {
+  display: none;
+}
